vue extend 设置 data
Signed-off-by: LuoHaoAt2017 <hluo5206@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "strict": true,
+    "strict": false,
     "sourceMap": true,
     "noImplicitAny": false,
     "module": "commonjs",
@@ -12,6 +12,12 @@
     "src/**/*.vue",
     "src/**/*.ts",
     "src/**/*.js",
+    "common/**/*.vue",
+    "common/**/*.ts",
+    "common/**/*.js",
+    "test/**/*.vue",
+    "test/**/*.ts",
+    "test/**/*.js",
   ],
   "exclude": []
 }
